# jira_query

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  ai_monthly_report.py  ai_weekly_report.py  config.yaml  description-probe-errors-check.md  jira-cli.py  jira-report.py  jira_query.py  monthly-report-ai-prompt.txt  monthly-report.sh  pr_utils.py  probe-review-tasks.sh  pyproject.toml  requirements.txt  test_jira_cli.py  test_pr_utils.py  weekly-report-ai-prompt.txt  weekly-report.sh
reports/: all-weekly-2026-06-09-raw.md  all-weekly-2026-06-09.md  all-weekly-2026-06-16-raw.md  all-weekly-2026-06-16.md  pipelines-montly-2026-05-raw.md  pipelines-montly-2026-05.md
src/jira_cli/: cli.py  pr_utils.py
tasks/: task-1-rest-v3-integration.md  task-2-adf-markdown-rendering.md  task-3-unified-hierarchy-parent-linking.md  task-4-expanded-issue-types.md  task-5-transition-resolutions.md  task-6-issue-viewing-command.md  task-7-sprint-lookup-command.md  task-8-project-level-defaults.md
templates/: default-list-reporter.md.j2  default-list.md.j2  default-simple.md.j2  default.md.j2  detailed-list.md.j2  gnuplot-gnatt-chart.gp.j2  users-velocity-raw.csv.j2
tests/: test_jira_cli.py  test_pr_utils.py
